# dino_dem_world

./: CMakeLists.txt  README.md  package.xml
launch/: dino_dem_world.launch
models/dino_dem_detailed_blank/: model.config  model.sdf
worlds/: dino_dem_detailed_blank.world
